== 0.0.3 2010-04-22

 * Add install task.

== 0.0.2 2010-04-12

 * Fix push_gem task.

== 0.0.1 2010-04-12

 * Hi.